--- a/KNearestNeighbor/KNearestNeighbor/Properties/Resources.resx
+++ b/KNearestNeighbor/KNearestNeighbor/Properties/Resources.resx
@@ -118,10 +118,19 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="description" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\description.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  </data>
   <data name="descriptionLeftPanelText" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\descriptionLeftPanelText.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="descriptionLeftPanelText1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\descriptionLeftPanelText.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="inputdatainstructions" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\inputdatainstructions.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  </data>
+  <data name="knnHelp" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\knnHelp.CHM;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
 </root>
