--- a/KNearestNeighbor/KNearestNeighbor/Properties/Resources.resx
+++ b/KNearestNeighbor/KNearestNeighbor/Properties/Resources.resx
@@ -118,19 +118,22 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="description" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\description.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
-  </data>
-  <data name="descriptionLeftPanelText" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\descriptionLeftPanelText.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="descriptionLeftPanelText1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\descriptionLeftPanelText.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="orange_light_top" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\orange-light-top.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="inputdatainstructions" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\inputdatainstructions.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
+  <data name="description" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\description.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  </data>
   <data name="knnHelp" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\knnHelp.CHM;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="openofficeorg_math_2ze_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\openofficeorg_math_2ze_icon.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="orange-light-main-top" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\orange-light-main-top.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
