--- a/KNearestNeighbor/KNearestNeighbor/Properties/Resources.resx
+++ b/KNearestNeighbor/KNearestNeighbor/Properties/Resources.resx
@@ -127,9 +127,6 @@
   <data name="description" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\description.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
-  <data name="openofficeorg_math_2ze_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\openofficeorg_math_2ze_icon.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="cluster1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\bin\Debug\Help\html\Images\cluster1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -222,6 +219,9 @@
   </data>
   <data name="outputDataStep_plotsClosestCompetitorPanel" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\bin\Debug\Help\html\Images\outputDataStep_plotsClosestCompetitorPanel.PNG;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="programIcon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\programicon.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="programoverview" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\bin\Debug\Help\html\KNN Program\programoverview.htm;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
