--- a/KNearestNeighbor/KNearestNeighbor/Wizard.resx
+++ b/KNearestNeighbor/KNearestNeighbor/Wizard.resx
@@ -2054,4 +2054,7 @@
   <metadata name="wizardBindingSource.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>564, 17</value>
   </metadata>
+  <metadata name="saveFileDialog1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>1002, 17</value>
+  </metadata>
 </root>
